--- a/Alacritty/alacritty.yml
+++ b/Alacritty/alacritty.yml
@@ -154,7 +154,7 @@ font:
   #
   # Thin strokes are suitable for retina displays, but for non-retina screens
   # it is recommended to set `use_thin_strokes` to `false`.
-  use_thin_strokes: true
+  #use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
@@ -258,7 +258,7 @@ colors:
   # Example:
   #   `- { index: 16, color: '#ff00ff' }`
   #
-  #indexed_colors: []
+  indexed_colors: []
 
 # Bell
 #
@@ -307,7 +307,7 @@ colors:
 # The value `0.0` is completely transparent and `1.0` is opaque.
 background_opacity: 1.0
 #selection:
-#semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
+semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
 
 # When set to `true`, selected text will be copied to the primary clipboard.
 save_to_clipboard: true
@@ -351,14 +351,14 @@ live_config_reload: true
 #   - (Windows) powershell
 shell:
   program: /bin/zsh
-  args:
-    - --login
+  #args:
+  #  - --login
 
 # Startup directory
 #
 # Directory the shell is started in. If this is unset, or `None`, the working
 # directory of the parent process will be used.
-#working_directory: None
+working_directory: /Users/stephane
 
 # WinPTY backend (Windows only)
 #
@@ -398,8 +398,8 @@ url:
   #   - (Linux/BSD) xdg-open
   #   - (Windows) explorer
   launcher:
-    program: open
-    args: []
+    program: /Applications/Firefox.app
+    #args: []
 # URL modifiers
 #
 # These are the modifiers that need to be held down for opening URLs when clicking
@@ -668,7 +668,7 @@ url:
 
 #debug:
 # Display the time it takes to redraw each frame.
-#render_timer: true
+render_timer: true
 # Keep the log file after quitting Alacritty.
 #persistent_logging: false
 
