Visual quality tweaks

--- a/Neofetch/config.conf
+++ b/Neofetch/config.conf
@@ -1,24 +1,26 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    info title
-    info underline
+    prin
+ 
+ #   info title
     info "Uptime" uptime
-
+    info underline
+    
     prin
     info "Host" model
     info "CPU" cpu
     info "Memory" memory
     info "GPU" gpu
     info "Resolution" resolution
-    info "Memory" memory
     info "Battery" battery
-
+    info underline
+    
     prin
     info "OS" distro
     info "Kernel" kernel
 #    info "Packages" packages
-#    info "Shell" shell
+    info "Shell" shell
 #    info "Resolution" resolution
 #    info "DE" de
 #    info "WM" wm
@@ -79,7 +81,7 @@ kernel_shorthand="on"
 # Values:   'on', 'tiny', 'off'
 # Flag:     --distro_shorthand
 # Supports: Everything except Windows and Haiku
-distro_shorthand="off"
+distro_shorthand="on"
 
 # Show/Hide OS Architecture.
 # Show 'x86_64', 'x86' and etc in 'Distro:' output.
@@ -165,7 +167,7 @@ package_managers="on"
 # Example:
 # on:  '/bin/bash'
 # off: 'bash'
-shell_path="off"
+shell_path="on"
 
 # Show $SHELL version
 #
@@ -532,7 +534,9 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+#colors=(15 15 15 15 15 15) # all white
+#colors=(distro)
+colors=(10 15 8 9 9 15)
 
 
 # Text Options
@@ -543,7 +547,7 @@ colors=(distro)
 # Default:  'on'
 # Values:   'on', 'off'
 # Flag:     --bold
-bold="on"
+bold="off"
 
 # Enable/Disable Underline
 #
@@ -557,7 +561,7 @@ underline_enabled="on"
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="-"
+underline_char="~"
 
 
 # Info Separator
@@ -569,7 +573,7 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
+separator=": "
 
 
 # Color Blocks
@@ -638,7 +642,7 @@ col_offset="auto"
 # Example:
 # neofetch --bar_char 'elapsed' 'total'
 # neofetch --bar_char '-' '='
-bar_char_elapsed="-"
+bar_char_elapsed="+"
 bar_char_total="="
 
 # Toggle Bar border
@@ -654,7 +658,7 @@ bar_border="on"
 # Default:  '15'
 # Values:   'num'
 # Flag:     --bar_length
-bar_length=15
+bar_length=12
 
 # Progress bar colors
 # When set to distro, uses your distro's logo colors.
@@ -666,8 +670,8 @@ bar_length=15
 # Example:
 # neofetch --bar_colors 3 4
 # neofetch --bar_colors distro 5
-bar_color_elapsed="distro"
-bar_color_total="distro"
+bar_color_elapsed="9"
+bar_color_total="10"
 
 
 # Info display
@@ -686,9 +690,9 @@ bar_color_total="distro"
 # barinfo: '[---=======] info'
 # off:     'info'
 cpu_display="off"
-memory_display="off"
-battery_display="off"
-disk_display="off"
+memory_display="infobar"
+battery_display="infobar"
+disk_display="infobar"
 
 
 # Backend Settings
@@ -785,7 +789,7 @@ ascii_colors=(distro)
 # Default: 'on'
 # Values:  'on', 'off'
 # Flag:    --ascii_bold
-ascii_bold="on"
+ascii_bold="off"
 
 
 # Image Options
