--- a/Alacritty/alacritty.yml
+++ b/Alacritty/alacritty.yml
@@ -348,8 +348,8 @@ live_config_reload: true
 #   - (Windows) powershell
 shell:
   program: /bin/zsh
-  #args:
-  #  - --login
+  args:
+    - --login
 
 # Startup directory
 #
