--- a/Alacritty/alacritty.yml
+++ b/Alacritty/alacritty.yml
@@ -98,7 +98,7 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
 
-    family: Fira Mono for Powerline
+    family: MesloLGS NF
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -107,31 +107,31 @@ font:
     # Font family
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Fira Mono for Powerline
+    family: MesloLGS NF
     # The `style` can be specified to pick a specific face.
     style: Bold
 
   # Italic font face
-  # italic:
-  # Font family
-  #
-  # If the italic family is not specified, it will fall back to the
-  # value specified for the normal font.
-  #   family: monospace
+  italic:
+    # Font family
+    #
+    # If the italic family is not specified, it will fall back to the
+    # value specified for the normal font.
+    family: MesloLGS NF
 
-  # The `style` can be specified to pick a specific face.
-  #   style: Italic
+    # The `style` can be specified to pick a specific face.
+    style: Italic
 
   # Bold italic font face
-  #  bold_italic:
-  # Font family
-  #
-  # If the bold italic family is not specified, it will fall back to the
-  # value specified for the normal font.
-  #   family: monospace
+  bold_italic:
+    # Font family
+    #
+    # If the bold italic family is not specified, it will fall back to the
+    # value specified for the normal font.
+    family: MesloLGS NF
 
-  # The `style` can be specified to pick a specific face.
-  #   style: Bold Italic
+    # The `style` can be specified to pick a specific face.
+    style: Bold Italic
 
   # Point size
   size: 14.0
