--- a/Neofetch/config.conf
+++ b/Neofetch/config.conf
@@ -486,7 +486,7 @@ disk_percent="on"
 # xmms2d
 # xnoise
 # yarock
-music_player="auto"
+# music_player="spotify"
 
 # Format to display song information.
 #
@@ -496,7 +496,7 @@ music_player="auto"
 #
 # Example:
 # default: 'Song: Jet - Get Born - Sgt Major'
-song_format="%artist% - %album% - %title%"
+# song_format="%title% - %artist% - %album%"
 
 # Print the Artist, Album and Title on separate lines
 #
@@ -510,7 +510,8 @@ song_format="%artist% - %album% - %title%"
 #      'Song: Chelsea Dagger'
 #
 # off: 'Song: The Fratellis - Costello Music - Chelsea Dagger'
-song_shorthand="off"
+# song_shorthand="on"
+#   Flag:" --shorthand"
 
 # 'mpc' arguments (specify a host, password etc).
 #
@@ -642,7 +643,7 @@ col_offset="auto"
 # Example:
 # neofetch --bar_char 'elapsed' 'total'
 # neofetch --bar_char '-' '='
-bar_char_elapsed="+"
+bar_char_elapsed="="
 bar_char_total="="
 
 # Toggle Bar border
