--- a/Alacritty/alacritty.yml
+++ b/Alacritty/alacritty.yml
@@ -35,8 +35,8 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 0
-    y: 0
+    x: 2
+    y: 2
 
 # Spread additional padding evenly around the terminal content.
 dynamic_padding: false
@@ -50,7 +50,7 @@ dynamic_padding: false
 # Values for `decorations` (macOS only):
 #     - transparent: Title bar, transparent background and title bar buttons
 #     - buttonless: Title bar, transparent background, but no title bar buttons
-#decorations: full
+decorations: none
 
 # Startup Mode (changes require restart)
 #
@@ -64,7 +64,7 @@ dynamic_padding: false
 startup_mode: Windowed
 
 # Window title
-title: Alacritty
+#title: Alacritty
 # Allow terminal applications to change Alacritty's window title.
 #dynamic_title: true
 # Window class (Linux/BSD only):
@@ -83,7 +83,7 @@ title: Alacritty
 scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
-  history: 100
+  history: 200
 
   # Scrolling distance multiplier.
   multiplier: 3
